<resources>
    <string name="app_name">🗺 Geo to wikipedia article map</string>
    <string name="permission_error">Missing permisions</string>
    <string name="label_select_kml_viewer">Select kml viewer to open Wikipedia infos with</string>
    <string name="pref_settings_title">Settings</string>
    <string name="pref_some_dir">some dir</string>
    <string name="btn_popup">…</string>
    <string name="lbl_service">Service:</string>
    <string name="lbl_add_symbols_to_map">Add Symbols to Map</string>
    <string name="lbl_add_icon_to_popup">Add Icon to popup</string>
    <string name="lbl_donot_show_this_dialog_again">Donot show this dialog again</string>
    <string name="lbl_file_format">File Format:</string>
    <string name="lbl_geo_viewer">Geo Viewer:</string>
</resources>